Fix Strath Union logo alignment and link

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -199,6 +199,12 @@ a {
     color-scheme: dark;
 }
 
+.strathunion-logo-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 //media queries 
 
 @media screen and (max-width: 600px) {
